{
    "name": "TouchInput",
    "maps": [
        {
            "name": "Touch",
            "id": "da55b6e5-6ed9-412f-84d6-d2235237437c",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "d8cfca02-3abe-46ae-afcd-88f084ef34ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "3406162d-ea6f-4598-87d9-809c34512dbc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3c25ad03-3e06-4338-9bf0-331ca3abdc67",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2d2efb7-2608-4f7e-90f6-6c093911ae5c",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}